examples/test/testpolicy5083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5083
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key11: value0
      key7: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value10
          key22: value42
      podSelector:
        matchLabels:
          key26: value26
          key11: value31
